Fix project thumbnail zoom issue on mobile by using auto height

--- a/public/assets/css/responsive.css
+++ b/public/assets/css/responsive.css
@@ -1378,3 +1378,13 @@ Version      : 1.0
     font-size: 13px;
   }
 }
+
+/* Fix for zoomed project thumbnails on mobile */
+@media only screen and (max-width: 767px) {
+  .project-item.style-two .project-image {
+    height: auto;
+  }
+  .project-item.style-two .project-image img {
+    height: auto;
+  }
+}
